# c_study_jz

./: .gitignore  CMakeLists.txt  README.md
doc/: 写在开始.md
doc/quickstart/: 环境搭建.md
src/demo/basic/: Demo01.c  Demo02.c
src/quickstart/C/: AdvancedSyntax.c  BasicSyntax.c  HelloCPrograming.c
